# Odevio-CLI

./: .gitignore  .readthedocs.yaml  LICENSE  Readme.rst  changelog.txt  pyproject.toml  requirements.txt
docs/: README.rst  conf.py  index.txt  requirements.txt
docs/_static/css/: custom.css
docs/ci_cd/: 1_github_actions.txt  2_gitlab_ci.txt  3_bitbucket_pipelines.txt  4_circle_ci.txt  index.txt
docs/cicd/: index.txt
docs/contribute/: index.txt
docs/ext/: sphinx_click_appollo.py
docs/installation/: index.txt
docs/installation_cli/: index.txt
docs/installation_cli/reference_guide_cli/: index.txt
docs/installation_cli/tutorial_cli/: 1_create_your_first_build.txt  2_setup_flutter_app_and_ios_deployment.txt  3_configure_Xcode_edit_code_debut_and_test.txt  4_retrieve_patch_from_Xcode.txt  5_create_apple_developer_account.txt  6_configure_app_store_connect.txt  7_how_to_make_an_app_id_using_appollo.txt  7_how_to_make_an_app_id_using_odevio.txt  8_create_ipa_testing_purpose.txt  9_deploy_flutter_ios_app_on_app_store.txt  index.txt
docs/reference_guide/: index.txt
docs/tutorial/: 1_create_apple_developer_account.txt  1_create_your_first_build.txt  2_configure_app_store_connect.txt  2_setup_flutter_app_and_ios_deployment.txt  3_configure_Xcode_edit_code_debut_and_test.txt  3_how_to_make_an_app_id_using_appollo.txt  3_retrieve_patch_from_Xcode.txt  4_create_apple_developer_account.txt  4_debug_and_test_your_ios_app_simulator.txt  4_retrieve_patch_from_Xcode.txt  4_setup_flutter_app_and_ios_deployment.txt  5_configure_app_store_connect.txt  5_create_apple_developer_account.txt  5_retrieve_patch_from_Xcode.txt  6_build_flutter_ios_app_with_or_without_a_Mac.txt  6_configure_app_store_connect.txt  6_debug_and_test_your_ios_app_simulator.txt  6_how_to_make_an_app_id_using_appollo.txt  7_create_ipa_testing_purpose.txt  7_debug_and_test_your_ios_app.txt  7_how_to_make_an_app_id_using_appollo.txt  7_how_to_make_an_app_id_using_odevio.txt  8_create_ipa_testing_purpose.txt  8_deploy_flutter_ios_app_on_app_store.txt  9_deploy_flutter_ios_app_on_app_store.txt  index.txt
docs/usage/: build_and_deploy_app.txt  configure_appollo.txt  connect_remote_desktop.txt  index.txt  manage_team_and_users.txt  manage_your_app_ids_with_appollo.txt  publish_app_on_app_store.txt  setup_XCode_and_retrieve.txt  test_app_on_appolloremote.txt  test_app_on_testflight.txt
src/appollo/: __main__.py  api.py  helpers.py  settings.py
src/appollo/commands/: app.py  apple.py  build.py  team.py  test.py  user.py
src/odevio/: __main__.py  api.py  helpers.py  settings.py
src/odevio/commands/: app.py  apple.py  build.py  team.py  user.py
tests/: __main__.py  account_test.py  app_test.py  apple_test.py  appollo_test.py  odevio_test.py  team_test.py
