[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appollo"
version = "0.1.0"
authors = [
    {name="Appollo", email="hello@appollo.space"}
]
description = "CLI to interact with Appollo, the easy way to setup, build & deploy flutter apps for iOS on Linux, Windows and MacOS"
readme = "Readme.rst"
license = {file="LICENSE"}
requires-python = ">=3.6.2"
keywords = ["Flutter", "iOS"]
classifiers  = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "click==8.0.4",
    "rich==11.2.0",
    "requests==2.27.1",
    "pyjwt==2.4.0"
]

[project.urls]
"Homepage" = "https://www.appollo.space"
"Source" = "https://github.com/Appollo-CLI/Appollo"

[project.scripts]
appollo="appollo.__main__:appollo"