[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "odevio"
version = "1.2.2"
authors = [
    {name="Odevio", email="hello@odevio.com"}
]
description = "CLI to interact with Odevio, the easy way to setup, build & deploy flutter apps for iOS on Linux, Windows and MacOS"
readme = "Readme.rst"
license = {file="LICENSE"}
requires-python = ">=3.7.0"
keywords = ["Flutter", "iOS"]
classifiers  = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
dependencies = [
    "click==8.0.4",
    "rich==11.2.0",
    "requests==2.27.1",
    "pyjwt==2.4.0",
    "questionary==1.10.0",
    "paramiko==3.0.0",
    "qrcode==7.4.2",
    "sseclient-py==1.8.0",
]

[project.urls]
"Homepage" = "https://www.odevio.com"
"Source" = "https://github.com/Odevio/Odevio-CLI"

[project.scripts]
odevio="odevio.__main__:odevio"
